Fixed overflow of middle pile.

--- a/components/game/game.module.scss
+++ b/components/game/game.module.scss
@@ -108,6 +108,8 @@ $tertiary-color: #D6536D;
 .middlePile {
   margin: 1rem auto;
   text-align: center;
+  width: 100%;
+  overflow-x: auto;
   > h2 {
     font-size: 1.25rem;
     font-weight: 700;
@@ -126,12 +128,13 @@ $tertiary-color: #D6536D;
   width: 100%;
   display: grid;
   grid-template-columns: 10% 80% 10%;
-  grid-template-rows: 165px 100px 1fr;
+  grid-template-rows: 165px 110px 1fr;
   > .middleDiv {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     align-self: center;
     justify-self: center;
+    width: 100%;
   }
   > li {
     position: relative;
